lets-Encrypt/ingress-resource-grafana.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: grafana-ingress
    namespace: monitoring
    #annotations:
    #  nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: nginx
    rules:
       -  host: grafana.wandexdev.me
          http:
            paths:
            - backend:
                service:
                  name: grafana
                  port:
                    number: 80
              path: /
              pathType: Prefix
