lets-Encrypt/ingress-resource-nodejs.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: webapp-ingress
    namespace: wandek8s-nodejs
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
  spec:
    tls:
    - hosts:
      - webapp.wandexdev.me
      secretName: wandek8s-nodejs-tls
    rules:
       -  host: webapp.wandexdev.me
          http:
            paths:
            - backend:
                service:
                  name: wandek8s-nodejs
                  port:
                    number: 3000
              path: /
              pathType: Prefix
